--- a/templates/dashboard/view-article.html.twig
+++ b/templates/dashboard/view-article.html.twig
@@ -29,7 +29,7 @@
                                     <a
                                         href="{{ path('modified-article',{id: article.id}) }}"
                                         class="btn btn-primary lien">
-                                        <i class="fas fa-cart-plus"></i>Modifier l'article</a>
+                                        Modifier l'article</a>
                                 </div>
                             </div>
                         </div>
