--- a/templates/User/sing-up.html.twig
+++ b/templates/User/sing-up.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-  {% if app.user %}
+{% if is_granted('ROLE_ADMIN') %}
 
    <h1>Inscription</h1>
     {{ form_start(formAddUser) }}
