--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
 
-  {# {% if app.user %} #}
-
+{% if is_granted('ROLE_ADMIN') %}
 
                         <div class="no-access bg-primary dashboard">
                         <div class="container">
@@ -13,7 +12,7 @@
                                 <div class="col-md-3 button">
                                 <div>
                                 <i class="fas fa-edit"></i>
-                                <p> <a href="#">Ecrire un article</a> </p>
+                                <p> <a href="{{ path('create-article')}}">Ecrire un article</a> </p>
                                 </div>
                                 </div>
 
@@ -37,7 +36,7 @@
 
                                 <div>
                                 <i class="fas fa-users"></i>
-                                <a href="#">Inscription</a>
+                                <a href="{{ path('sign-up')}}">Inscription</a>
                                 </div>
                                 
                                 </div>
@@ -53,9 +52,46 @@
                             </div>
                         </div>
                         </div>
+{% endif %}
 
+{% if is_granted('ROLE_USER') %}
 
-                        {# {% endif %} #}
+                        <div class="no-access bg-primary dashboard">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-3 button">
+                                <div>
+                                <i class="fas fa-edit"></i>
+                                <p> <a href="{{ path('create-article')}}">Ecrire un article</a> </p>
+                                </div>
+                                </div>
 
+                                <div class="col-md-3 button">
+                                <div>
+                                <i class="fas fa-newspaper"></i>
+                                <a href="#">Modifier un article</a>
+                                </div>
+                                
+                                </div>
 
+                                <div class="col-md-3 button">
+                                <div>
+                                <i class="fas fa-pencil-ruler"></i>
+                                <a href="#">Brouillons</a>
+                                </div>
+                                </div>
+                                
+
+                                <div class="col-md-3 button">
+
+                                <div>
+                                <i class="fas fa-user"></i>
+                                <a href="#">Mon profil</a>
+                                </div>
+                                
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+{% endif %}
 {% endblock %}
