--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -1,97 +1,63 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}S'inscrire{% endblock %}
+{% block title %}
+  S'inscrire
+{% endblock %}
 
 {% block body %}
+  <div class="no-access bg-primary dashboard">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2 block-access">
+          <a href="/">
+            <img class="logo" src="{{ asset('img/logo.svg') }}" alt="logo" />
+          </a>
+        </div>
 
-{% if is_granted('ROLE_ADMIN') %}
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-md-2 button">
+              <div>
+                <i class="fas fa-edit"></i>
+                <p>
+                  <a href="{{ path('create-article') }}">Ecrire un article</a>
+                </p>
+              </div>
+            </div>
 
-                        <div class="no-access bg-primary dashboard">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-3 button">
-                                <div>
-                                <i class="fas fa-edit"></i>
-                                <p> <a href="{{ path('create-article')}}">Ecrire un article</a> </p>
-                                </div>
-                                </div>
+            <div class="col-md-2 button">
+              <div>
+                <i class="fas fa-newspaper"></i> <br />
+                <a href="#">Modifier un article</a>
+              </div>
+            </div>
 
-                                <div class="col-md-3 button">
-                                <div>
-                                <i class="fas fa-newspaper"></i>
-                                <a href="#">Modifier un article</a>
-                                </div>
-                                
-                                </div>
+            <div class="col-md-2 button">
+              <div>
+                <i class="fas fa-pencil-ruler"></i>
+                <a href="#">Brouillons</a>
+              </div>
+            </div>
 
-                                <div class="col-md-3 button">
-                                <div>
-                                <i class="fas fa-pencil-ruler"></i>
-                                <a href="#">Brouillons</a>
-                                </div>
-                                
-                                </div>
+            {% if is_granted('ROLE_ADMIN') %}
+              <div class="col-md-2 button">
+                <div>
+                  <i class="fas fa-users"></i>
+                  <a href="{{ path('sign-up') }}">Inscription</a>
+                </div>
+              </div>
+            {% endif %}
 
-                                <div class="col-md-3 button">
-
-                                <div>
-                                <i class="fas fa-users"></i>
-                                <a href="{{ path('sign-up')}}">Inscription</a>
-                                </div>
-                                
-                                </div>
-
-                                <div class="col-md-3 button">
-
-                                <div>
-                                <i class="fas fa-user"></i>
-                                <a href="#">Mon profil</a>
-                                </div>
-                                
-                                </div>
-                            </div>
-                        </div>
-                        </div>
-{% endif %}
-
-{% if is_granted('ROLE_USER') %}
-
-                        <div class="no-access bg-primary dashboard">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-3 button">
-                                <div>
-                                <i class="fas fa-edit"></i>
-                                <p> <a href="{{ path('create-article')}}">Ecrire un article</a> </p>
-                                </div>
-                                </div>
-
-                                <div class="col-md-3 button">
-                                <div>
-                                <i class="fas fa-newspaper"></i>
-                                <a href="#">Modifier un article</a>
-                                </div>
-                                
-                                </div>
-
-                                <div class="col-md-3 button">
-                                <div>
-                                <i class="fas fa-pencil-ruler"></i>
-                                <a href="#">Brouillons</a>
-                                </div>
-                                </div>
-                                
-
-                                <div class="col-md-3 button">
-
-                                <div>
-                                <i class="fas fa-user"></i>
-                                <a href="#">Mon profil</a>
-                                </div>
-                                
-                                </div>
-                            </div>
-                        </div>
-                        </div>
-{% endif %}
+            <div class="col-md-2 button">
+              <div>
+                <i class="fas fa-user"></i>
+                <a href="#">Mon profil</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-1 block-access"></div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
