--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,8 +8,18 @@ body {
   text-align: center;
 }
 
+.logo {
+  width: 180px;
+  margin-top: 20px;
+}
+
 img {
   text-align: center;
+  widows: 100%;
+}
+
+ul {
+  margin-bottom: 0;
 }
 
 li {
@@ -34,48 +44,45 @@ li {
   background-color: white !important;
 }
 
-.dashboard .row .col-md-3 {
-  border-radius: 20px;
-  padding: 20px;
+.dashboard .row .col-md-2 div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.dashboard .row .col-md-3 div {
+.dashboard .row .col-md-2 div {
   border-radius: 20px;
-  border: 1px solid red;
-  padding: 20px;
-  height: 230px;
+  background-color: #e5e5e5;
+  padding: 30px;
+  height: 180px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.dashboard .row .col-md-3 div a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.dashboard .row .col-md-2 div a {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: 40px;
   text-decoration: none;
   font-weight: bold;
 }
 
 .fa-user-times,
-.dashboard .row .col-md-3 i {
+.dashboard .row .col-md-2 i {
   display: block;
   width: 100%;
   font-size: 150px;
   color: white;
-  margin-bottom: 40px;
 }
 
-.dashboard .row .col-md-3 i {
-  color: black;
-  font-size: 70px;
+.dashboard .row .col-md-2 i {
+  color: #969696;
+  font-size: 50px;
   width: 100%;
   text-align: center;
 }
@@ -93,4 +100,92 @@ li {
 
 .navbar {
   padding: 0;
+}
+
+.home {
+  background-image: url('../img/background-home.png');
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 572px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+h1 {
+  color: white;
+  font-weight: bold;
+}
+
+nav {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: white !important;
+}
+
+nav i {
+  text-transform: uppercase;
+  font-size: 22px;
+  color: white;
+}
+
+.dashbord a {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 11px;
+  border: white solid 1px;
+  z-index: 3000;
+}
+
+.dashbord i {
+  font-size: 22px;
+}
+
+.sign-in a {
+  position: absolute;
+  top: 100px;
+  right: 7px;
+  font-size: 10px;
+  text-transform: uppercase;
+  z-index: 3000;
+}
+
+.dashbord i {
+  font-size: 22px;
+}
+
+.block-access {
+  background-color: #76c2ad;
+  min-height: 100vh;
+}
+
+input {
+  overflow: visible;
+  width: 20%;
+  display: block;
+  margin: 50px auto;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #969696;
+}
+
+section h1 {
+  color: #969696;
+  margin-top: 50px;
+}
+
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
+  -webkit-appearance: button;
+  background-color: #77c2ad;
+  border: none;
+  padding: 10px 30px;
+  border-radius: 10px;
+  color: white;
+  font-weight: bold;
 }
