--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,40 +10,57 @@
     </head>
     <body>
 <header class="bg-primary">
-<img src="" alt="logo">
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<img class="logo" src="{{ asset('img/logo.svg') }}" alt="logo">
 
-  <div class="collapse navbar-collapse" id="navbarColor01">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ path('list-articles') }}">Catégories</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="contact">Nous contacter</a>
-      </li>
-    </ul>
 <ul>
   {% if app.user %}
-                            <li>
+  {% if is_granted('ROLE_BO') %}
+                            <li class="dashbord">
+                            {# {% for user in users %}
+                            <p> Bonjour {{ article.class }}</p> #}
+                            {# {% endfor %} #}
+                                <a class="btn btn-primary" href="{{ path('dashboard') }}"> <i class="fas fa-tachometer-alt"></i>  <br> Accéder au <br> Dashboard</a>
+                            </li>
+{% endif %}
+
+                               <li class="sign-in">
                                 <a class="btn btn-primary" href="{{ path('sign-out') }}"> <i class="fas fa-user"></i> Déconnexion</a>
                             </li>
-
                         {% else %}
-                            <li>
+                            <li class="sign-in">
                                 <a class="btn btn-primary" href="{{ path('sign-in') }}"> <i class="fas fa-user"></i> Connexion</a>
                             </li>
 
                         {% endif %}
 </li></ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/"><i class="fas fa-home"></i> <br> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ path('list-articles') }}"> <i class="fas fa-tags"></i> <br> Catégories</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="contact"> <i class="fas fa-envelope-open"></i> <br> Contact</a>
+      </li>
+    </ul>
+
   </div>
 </nav></header>
 
 
     
-        {% block body %}{% endblock %}
+        {% block body %}
+        <section>
+        <img src="{{ asset('img/bandeau.svg') }}" alt="bandeau">
+        
+        
+        </section>
+        
+        {% endblock %}
         {% block javascripts %} 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="{{ asset('js/jquery.fancybox.js') }}"></script>
