--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Bienvenue{% endblock %}
 
 {% block body %}
-    <h1> {{ title }}</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maxime
-        consequatur rerum earum odit in facilis libero distinctio est laborum qui
-        quisquam cumque optio modi mollitia dignissimos. Repellat, aperiam tempore?</p>
+<section class="home">
+    <h1> {{ title }}</h1>
+</section>
+
+
 {% endblock %}
