--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -28,7 +28,7 @@
             <div class="col-md-2 button">
               <div>
                 <i class="fas fa-newspaper"></i> <br />
-                <a href="#">Modifier un article</a>
+                <a href="{{ path('list-articles') }}">Modifier un article</a>
               </div>
             </div>
 
@@ -47,13 +47,6 @@
                 </div>
               </div>
             {% endif %}
-
-            <div class="col-md-2 button">
-              <div>
-                <i class="fas fa-user"></i>
-                <a href="#">Mon profil</a>
-              </div>
-            </div>
           </div>
         </div>
         <div class="col-md-1 block-access"></div>
