--- a/templates/dashboard/list-article.html.twig
+++ b/templates/dashboard/list-article.html.twig
@@ -1,74 +1,119 @@
 {% extends 'base.html.twig' %}
 
- {% block title %}Liste des articles{% endblock %}
-
+{% block title %}
+  Liste des articles
+{% endblock %}
 
 {% block body %}
-
-<main>
-<section>
- <div class="card-section">
+  <main>
+    <section>
+      <img src="{{ asset('img/bandeau.svg') }}" alt="bandeau" />
+      <div class="card-section">
         <div class="container">
-        <h2>Articles</h2>
-            <div class="row">
+          <h2>
+            Catégories
+          </h2>
+          <div class="row">
+            <div class="col-md-12 content-filter-project">
+              <button class="btn-filter btn-color filter-button"
+                data-filter="*">
+                Tous les articles
+              </button>
+              <button class="btn-filter btn-color filter-button"
+                data-filter=".Actualites">
+                Actualités
+              </button>
+              <button class="btn-filter btn-color filter-button"
+                data-filter=".Voyage">
+                Voyage
+              </button>
+              <button class="btn-filter btn-color filter-button"
+                data-filter=".Hightech">
+                High-tech
+              </button>
+              <button class="btn-filter btn-color filter-button"
+                data-filter=".Loisirs">
+                Loisirs
+              </button>
+              <button class="btn-filter btn-color filter-button"
+                data-filter=".Gossip">
+                Gossip
+              </button>
 
+              <hr style="background-color:white;" />
+            </div>
 
-<div class="col-md-12 content-filter-project">
-      <button class="btn-filter btn-color filter-button lien" data-filter="*"> Tous les articles </button>
-      <button class="btn-filter btn-color filter-button lien" data-filter=".Actualites">Actualités</button>
-      <button class="btn-filter btn-color filter-button lien" data-filter=".Voyage">Voyage</button>
-      <button class="btn-filter btn-color filter-button lien" data-filter=".Hightech">High-tech</button>
-      <button class="btn-filter btn-color filter-button lien" data-filter=".Loisirs">Loisirs</button>
-      <button class="btn-filter btn-color filter-button lien" data-filter=".Gossip">Gossip</button>
+            {% for article in articles %}
+            <div class="col-md-4 article {{ article.class }}">
+                <div class="card">
+                <img src="{{ article.image }}"
+                    class="card-img-top"
+                    alt="..." />
 
-      <hr style="background-color:white;">
-  </div>
-
-{% for article in articles %}
-
-
-                <div class="col-md-4 {{ article.class }}">
-                    <div class="card">
-                        <img src="{{ article.image }}" class="card-img-top" alt="...">
-                        
-                        <div class="">
-                            <h5 class="card-title">{{ article.title }}</h5>
-                            <p class="card-text">{{ article.content }}.</p>
-                            <a href="{{ path('view-article',{id: article.id}) }}" class="btn btn-primary lien">Lire l'article</a>
-                        </div>
-
-                           {% if app.user %}
-
-                       <div class="row">
-                           <div class="col-md-4">
-                           <a href="{{ path('modified-article',{id: article.id}) }}">
-                           <i class="fas fa-edit"></i>
-                           </a>
-                           
-                           </div>
-
-                              <div class="col-md-4">
-                           <i class="fas fa-eye"></i>
-                           </div>
-
-                              <div class="col-md-4">
-                           supprimer
-                           </div>
-                       </div>
-
-                       {% endif %}
-                    </div>
+                <div class="">
+                    <h5 class="card-title">
+                    {{ article.title }}
+                    </h5>
+                    <p class="card-text">
+                    {{ article.content }}.
+                    </p>
 
                     
+                    <div class="row row-article">
 
+                    {% if app.user %}
+                    {% if is_granted('ROLE_EDITOR') %}
+                        <div class="col-md-4">
+                            <a href="{{path('view-article',{id: article.id})}}">
+                              <i class="fas fa-eye"></i>
+                            </a>
+                        </div>
+
+                          <div class="col-md-4">
+                            <a href="{{
+                              path(
+                                'modified-article',
+                                {
+                                  id: article.id
+                                }
+                              )
+                              }}">
+                              <i class="fas fa-edit"></i>
+                            </a>
+                          </div>
+                        
+
+                        <div class="col-md-4">
+                          <a href=""><i class="fas fa-trash-alt"></i></a>
+                        </div>
+                      {% endif %}
+                    {% else %}
+
+
+                        <div class="col-md-12">
+                        <a href="{{
+                        path(
+                          'view-article',
+                          {
+                            id: article.id
+                          }
+                        )
+                        }}"
+                        class="btn btn-primary lien">
+                        Lire l'article
+                      </a>
+                        </div>
+                    {% endif %}
+                  </div>
+                  
                 </div>
-{% endfor %}
-
-            </div>
+                
+              </div>
+            
+          </div>
+          {% endfor %}
         </div>
-    </div>
-</section>
-
-</main>
-
+      </div>
+    </section>
+  </main>
 {% endblock %}
