--- a/templates/dashboard/modified-article.html.twig
+++ b/templates/dashboard/modified-article.html.twig
@@ -7,18 +7,22 @@
 
 <h1>Modifier un article</h1>
 
+<section class="modified-article">
 {{ form_start(formAddArticle) }}
 
-{{ form_row(formAddArticle.title, {'attr': {'placeholder': 'Nom du Produit'}}) }}
-
-{{ form_row(formAddArticle.content, {'attr': {'placeholder': 'Description du Produit'}}) }}
-
+{{ form_row(formAddArticle.title, {'attr': {'placeholder': "Nom de l'article"}}) }}
 {{ form_row(formAddArticle.image, {'attr': {'placeholder': "URL de l'image"}}) }}
+<div class="textarea">
+{{ form_row(formAddArticle.content, {'attr': {'placeholder': "Description de l'article"}}) }}
+</div>
 
 {{ form_row(formAddArticle.class, {'attr': {'placeholder': "Catégorie de l'article"}}) }}
 
 <button type="submit" class="btn btn-success">Mettre à jour </button>
 
 {{ form_end(formAddArticle) }}
+
+</section>
+
 
 {% endblock %}
