delete articles for ROLE_EDITOR

--- a/templates/dashboard/list-article.html.twig
+++ b/templates/dashboard/list-article.html.twig
@@ -84,7 +84,14 @@
                         
 
                         <div class="col-md-4">
-                          <a href=""><i class="fas fa-trash-alt"></i></a>
+                          <a href="{{
+                              path(
+                                'delete-article',
+                                {
+                                  id: article.id
+                                }
+                              )
+                              }}"><i class="fas fa-trash-alt"></i></a>
                         </div>
                       {% endif %}
                     {% else %}
