Possibility to save articles in drafts

--- a/templates/dashboard/create-article.html.twig
+++ b/templates/dashboard/create-article.html.twig
@@ -27,8 +27,8 @@
                 <div class="col-md-5 offset-md-1">
                 <p>Description</p>
 {{ form_row(formAddArticle.content, {'attr': {'placeholder': "Résumé de l'article"}}) }}
-<button type="submit" class="btn btn-secondary"> Enregistrer dans brouillons</button>
-<button type="submit" class="btn btn-success"> Publier l'article </button>
+<button  type="submit" class="btn btn-secondary"> Enregistrer dans brouillons</button>
+<button value="true" name="published" type="submit" class="btn btn-success"> Publier l'article </button>
         </div>
     </div>
 </div>
