--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -35,7 +35,7 @@
             <div class="col-md-2 button">
               <div>
                 <i class="fas fa-pencil-ruler"></i>
-                <a href="#">Brouillons</a>
+                <a href="{{ path('drafts-articles') }}">Brouillons</a>
               </div>
             </div>
 
