--- a/templates/dashboard/modified-article.html.twig
+++ b/templates/dashboard/modified-article.html.twig
@@ -18,7 +18,8 @@
 
 {{ form_row(formAddArticle.class, {'attr': {'placeholder': "Catégorie de l'article"}}) }}
 
-<button type="submit" class="btn btn-success">Mettre à jour </button>
+<button type="submit" class="btn btn-secondary"> Enregistrer dans brouillons</button>
+<button value="true" name="published" type="submit" class="btn btn-success"> Publier l'article </button>
 
 {{ form_end(formAddArticle) }}
 
