--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -1,12 +1,132 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bienvenue{% endblock %}
+{% block title %}
+  Bienvenue
+{% endblock %}
 
 {% block body %}
+  <section class="home">
+    <h1>
+      Blog
+    </h1>
+  </section>
 
-<section class="home">
-    <h1> {{ title }}</h1>
-</section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>
+            Explore
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, aut
+            minus! Necessitatibus omnis fuga nesciunt et ullam maxime alias
+            explicabo obcaecati assumenda consequatur accusamus, veniam dolorum,
+            doloremque itaque dolores dolor.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>
+            À la une
+          </h2>
+        </div>
 
+        {% for article in articles %}
+          <div class="col-md-4 article {{ article.class }}">
+            <div class="card">
+              <a href="{{
+                path(
+                  'view-article',
+                  {
+                    id: article.id
+                  }
+                )
+                }}">
+                <div class="block-image">
+                  <img src="{{ article.image }}"
+                    class="card-img-top"
+                    alt="..." />
+                </div>
+              </a>
+
+              <div class="list-article">
+                <h5 class="card-title">
+                  {{ article.title }}
+                </h5>
+                <p class="card-text">
+                  {{ article.content }}.
+                </p>
+
+                <div class="row row-article">
+                  {% if app.user %}
+                    {% if is_granted('ROLE_EDITOR') %}
+                      <div class="col-md-4">
+                        <a href="{{
+                          path(
+                            'view-article',
+                            {
+                              id: article.id
+                            }
+                          )
+                          }}">
+                          <i class="fas fa-eye"></i>
+                        </a>
+                      </div>
+
+                      <div class="col-md-4">
+                        <a href="{{
+                          path(
+                            'modified-article',
+                            {
+                              id: article.id
+                            }
+                          )
+                          }}">
+                          <i class="fas fa-edit"></i>
+                        </a>
+                      </div>
+
+                      <div class="col-md-4">
+                        <a href="{{
+                          path(
+                            'delete-article',
+                            {
+                              id: article.id
+                            }
+                          )
+                          }}">
+                          <i class="fas fa-trash-alt"></i>
+                        </a>
+                      </div>
+                    {% endif %}
+                  {% else %}
+                    <div class="col-md-12">
+                      <a href="{{
+                        path(
+                          'view-article',
+                          {
+                            id: article.id
+                          }
+                        )
+                        }}"
+                        class="btn btn-primary lien">
+                        Lire l'article
+                      </a>
+                    </div>
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
+  </section>
 {% endblock %}
